--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "toastr": "^2.1.4",
     "vue": "^2.6.10",
+    "vue-awesome": "^3.5.4",
     "vue-router": "^3.0.3",
+    "vue2-scrollbar": "^0.0.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -25,6 +29,8 @@
     "babel-jest": "^23.6.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.2.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
